Version 2.0
  * LWB: Fixed a bug where the view menu would occasionally show the wrong icon for a net.

Version 1.5.1 (08/10/2007)
  * LWB: Fixed a bug where multiple-instance tasks were not being initialsed properly and consequently
    causing a number of dialogs, and behaviours around multiple-instance tasks to fail.
  * LWB: Changed the ordering of menu items on the vertex popup menu so that the "Cut" action 
    no longer appears at the top of the menu.
  * LWB: Fixed a bug where cutting a task with attached flows containing predicates, 
    then undoing the  cut, would result in a previously correctly validating specification 
    to stop validating.
  * LWB: Enhanced the editor so that it shows a broken icon if I cannot find the icon specified
    (useful for transferring specs between machines with different icon sets plugged in).
  * LWB: Fixed a bug where frame order was not being preserved between an "Iconify all" 
    action and a "Show all" action for the nets of a specfication.
  * LWB: The editor is now closer to (but not perfectly) rebuilding the state of the net 
    frames on a load, as per how the workflow designer left the state on a save.
  * LWB: Fixed a bug where the editor was reacting poorly to an exception being thrown in 
    an engine client-side API call when attempting to connect to a non-existant engine.

Version 1.5 (27/07/2007) 
  * LWB: Atomic tasks have been enhanced so that an icon can be embedded within the task
    to help in user understandability of a net. This includes a plugin mechanism allowing
    workflow designers to add their own icons.
  * LWB: Decorators on tasks have now been enhanced so that joins and splits can now have
    differing fill colours to help visually distinguish between them.  
  * LWB: Now, when selecting a single net element, a notes tab will appear in the bottom
    pane of the editor, allowing workflow designers to add design notes (which will not be